--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "maczyt",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
